--- a/Naturapp/MyCollectionViewCell.xib
+++ b/Naturapp/MyCollectionViewCell.xib
@@ -10,27 +10,27 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="col" id="gTV-IL-0wX" customClass="MyCollectionViewCell" customModule="Naturapp" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="270" height="150"/>
+            <rect key="frame" x="0.0" y="0.0" width="270" height="182"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                <rect key="frame" x="0.0" y="0.0" width="270" height="150"/>
+                <rect key="frame" x="0.0" y="0.0" width="270" height="182"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
-                    <stackView opaque="NO" contentMode="scaleToFill" ambiguous="YES" axis="vertical" alignment="center" spacing="1" translatesAutoresizingMaskIntoConstraints="NO" id="lqQ-B4-2pi">
-                        <rect key="frame" x="0.0" y="-2" width="270" height="150"/>
+                    <stackView opaque="NO" contentMode="scaleToFill" ambiguous="YES" axis="vertical" alignment="center" spacing="15" translatesAutoresizingMaskIntoConstraints="NO" id="lqQ-B4-2pi">
+                        <rect key="frame" x="0.0" y="-2" width="270" height="182"/>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="SiB-ES-PQO">
-                                <rect key="frame" x="10" y="0.0" width="250" height="114.5"/>
+                                <rect key="frame" x="10" y="0.0" width="250" height="130"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="114.5" id="3P0-1A-wDJ"/>
+                                    <constraint firstAttribute="height" constant="130" id="3P0-1A-wDJ"/>
                                 </constraints>
                             </imageView>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="A0d-yt-OtK">
-                                <rect key="frame" x="0.0" y="115.5" width="270" height="34.5"/>
+                                <rect key="frame" x="0.0" y="145" width="270" height="37"/>
                                 <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="f5w-KF-DHA">
-                                        <rect key="frame" x="0.0" y="0.0" width="270" height="34.5"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="f5w-KF-DHA">
+                                        <rect key="frame" x="0.0" y="0.0" width="270" height="37"/>
+                                        <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="17"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
@@ -40,7 +40,7 @@
                         <constraints>
                             <constraint firstItem="A0d-yt-OtK" firstAttribute="leading" secondItem="lqQ-B4-2pi" secondAttribute="leading" id="06t-EZ-133"/>
                             <constraint firstAttribute="trailing" secondItem="A0d-yt-OtK" secondAttribute="trailing" id="IfT-Mp-IRL"/>
-                            <constraint firstItem="A0d-yt-OtK" firstAttribute="top" secondItem="SiB-ES-PQO" secondAttribute="bottom" id="sfB-mK-5BX"/>
+                            <constraint firstItem="A0d-yt-OtK" firstAttribute="top" secondItem="SiB-ES-PQO" secondAttribute="bottom" constant="6" id="sfB-mK-5BX"/>
                             <constraint firstAttribute="bottom" secondItem="A0d-yt-OtK" secondAttribute="bottom" id="tww-1E-9te"/>
                         </constraints>
                     </stackView>
@@ -53,12 +53,12 @@
                 <constraint firstItem="lqQ-B4-2pi" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="s5w-Ee-Gwd"/>
                 <constraint firstItem="lqQ-B4-2pi" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="xqk-Mr-DKd"/>
             </constraints>
-            <size key="customSize" width="270" height="150"/>
+            <size key="customSize" width="270" height="182"/>
             <connections>
                 <outlet property="imageView" destination="SiB-ES-PQO" id="7Tw-XG-6OV"/>
                 <outlet property="tituloLabel" destination="f5w-KF-DHA" id="Lja-GD-VMA"/>
             </connections>
-            <point key="canvasLocation" x="243.47826086956525" y="105.13392857142857"/>
+            <point key="canvasLocation" x="243.47826086956525" y="115.17857142857142"/>
         </collectionViewCell>
     </objects>
 </document>
