--- a/Naturapp/Base.lproj/Main.storyboard
+++ b/Naturapp/Base.lproj/Main.storyboard
@@ -205,6 +205,7 @@
                     </navigationItem>
                     <connections>
                         <outlet property="collectionView" destination="Q17-eG-A3X" id="IKk-Tv-Xld"/>
+                        <segue destination="b44-7c-L2J" kind="show" identifier="lugar" id="y15-52-YIe"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="pIl-c6-UuB" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
@@ -220,27 +221,27 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="61" translatesAutoresizingMaskIntoConstraints="NO" id="pbq-3N-Y58">
-                                <rect key="frame" x="30" y="106" width="139.5" height="268"/>
+                                <rect key="frame" x="30" y="106" width="315" height="359"/>
                                 <subviews>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="33" translatesAutoresizingMaskIntoConstraints="NO" id="Dhf-pt-mA3">
-                                        <rect key="frame" x="0.0" y="0.0" width="139.5" height="167"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="315" height="167"/>
                                         <subviews>
                                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="questionmark.square" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="AaJ-iq-dVe">
-                                                <rect key="frame" x="0.0" y="1" width="139.5" height="97.5"/>
+                                                <rect key="frame" x="0.0" y="1" width="315" height="97.5"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="100" id="2Y7-CN-iWe"/>
                                                     <constraint firstAttribute="width" constant="100" id="z53-ff-IqO"/>
                                                 </constraints>
                                             </imageView>
                                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Nombre del lugar" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Sz0-gE-Rp5">
-                                                <rect key="frame" x="0.0" y="133" width="139.5" height="34"/>
+                                                <rect key="frame" x="0.0" y="133" width="315" height="34"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                 <textInputTraits key="textInputTraits"/>
                                             </textField>
                                         </subviews>
                                     </stackView>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="69r-Ok-tVJ">
-                                        <rect key="frame" x="30" y="228" width="80" height="40"/>
+                                        <rect key="frame" x="117.5" y="228" width="80" height="40"/>
                                         <color key="backgroundColor" red="0.0" green="0.56031829119999998" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="80" id="9hU-S1-Xyx"/>
@@ -256,6 +257,13 @@
                                         </userDefinedRuntimeAttributes>
                                         <connections>
                                             <action selector="compartirButtton:" destination="Q2Z-gT-nqE" eventType="touchUpInside" id="G6x-K2-u1o"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="oX4-e0-pxg">
+                                        <rect key="frame" x="134.5" y="329" width="46" height="30"/>
+                                        <state key="normal" title="Button"/>
+                                        <connections>
+                                            <action selector="test:" destination="Q2Z-gT-nqE" eventType="touchUpInside" id="JxL-Nh-NGV"/>
                                         </connections>
                                     </button>
                                 </subviews>
@@ -281,7 +289,50 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Elr-iN-EOo" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3509.5999999999999" y="45.42728635682159"/>
+            <point key="canvasLocation" x="3482" y="-133"/>
+        </scene>
+        <!--Lugar View Controller-->
+        <scene sceneID="rm9-rF-aYR">
+            <objects>
+                <viewController id="b44-7c-L2J" customClass="LugarViewController" customModule="Naturapp" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="83f-8E-3TX">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="2Am-Nu-lO3">
+                                <rect key="frame" x="47" y="76" width="280" height="341"/>
+                                <subviews>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="cQS-x7-cc1">
+                                        <rect key="frame" x="20" y="20" width="240" height="128"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                    </imageView>
+                                    <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="70f-Er-V0N">
+                                        <rect key="frame" x="20" y="193" width="240" height="128"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                    </mapView>
+                                </subviews>
+                                <viewLayoutGuide key="contentLayoutGuide" id="PVM-Yx-AUd"/>
+                                <viewLayoutGuide key="frameLayoutGuide" id="7pc-x7-jfA"/>
+                            </scrollView>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="gA7-PU-ifG"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="gA7-PU-ifG" firstAttribute="bottom" secondItem="2Am-Nu-lO3" secondAttribute="bottom" id="3N1-Ld-mV3"/>
+                            <constraint firstItem="2Am-Nu-lO3" firstAttribute="leading" secondItem="gA7-PU-ifG" secondAttribute="leading" id="4A2-jm-c06"/>
+                            <constraint firstItem="gA7-PU-ifG" firstAttribute="trailing" secondItem="2Am-Nu-lO3" secondAttribute="trailing" id="UeP-MB-2lO"/>
+                            <constraint firstItem="2Am-Nu-lO3" firstAttribute="top" secondItem="83f-8E-3TX" secondAttribute="top" id="svZ-qb-g2B"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" id="yYn-nS-5s6"/>
+                    <connections>
+                        <outlet property="image" destination="cQS-x7-cc1" id="jOC-L3-ME4"/>
+                        <outlet property="mapMK" destination="70f-Er-V0N" id="ftd-zP-r6T"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="wt1-2m-xnV" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="3481" y="552"/>
         </scene>
         <!--Registro-->
         <scene sceneID="3Db-1B-sXL">
