--- a/Naturapp/Base.lproj/Main.storyboard
+++ b/Naturapp/Base.lproj/Main.storyboard
@@ -221,27 +221,27 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="61" translatesAutoresizingMaskIntoConstraints="NO" id="pbq-3N-Y58">
-                                <rect key="frame" x="30" y="106" width="315" height="359"/>
+                                <rect key="frame" x="30" y="106" width="315" height="409"/>
                                 <subviews>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="33" translatesAutoresizingMaskIntoConstraints="NO" id="Dhf-pt-mA3">
-                                        <rect key="frame" x="0.0" y="0.0" width="315" height="167"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="315" height="217"/>
                                         <subviews>
                                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="questionmark.square" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="AaJ-iq-dVe">
-                                                <rect key="frame" x="0.0" y="1" width="315" height="97.5"/>
+                                                <rect key="frame" x="0.0" y="1" width="315" height="147.5"/>
                                                 <constraints>
-                                                    <constraint firstAttribute="height" constant="100" id="2Y7-CN-iWe"/>
-                                                    <constraint firstAttribute="width" constant="100" id="z53-ff-IqO"/>
+                                                    <constraint firstAttribute="height" constant="150" id="2Y7-CN-iWe"/>
+                                                    <constraint firstAttribute="width" constant="60" id="z53-ff-IqO"/>
                                                 </constraints>
                                             </imageView>
                                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Nombre del lugar" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Sz0-gE-Rp5">
-                                                <rect key="frame" x="0.0" y="133" width="315" height="34"/>
+                                                <rect key="frame" x="0.0" y="183" width="315" height="34"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                 <textInputTraits key="textInputTraits"/>
                                             </textField>
                                         </subviews>
                                     </stackView>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="69r-Ok-tVJ">
-                                        <rect key="frame" x="117.5" y="228" width="80" height="40"/>
+                                        <rect key="frame" x="117.5" y="278" width="80" height="40"/>
                                         <color key="backgroundColor" red="0.0" green="0.56031829119999998" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="80" id="9hU-S1-Xyx"/>
@@ -260,7 +260,7 @@
                                         </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="oX4-e0-pxg">
-                                        <rect key="frame" x="134.5" y="329" width="46" height="30"/>
+                                        <rect key="frame" x="134.5" y="379" width="46" height="30"/>
                                         <state key="normal" title="Button"/>
                                         <connections>
                                             <action selector="test:" destination="Q2Z-gT-nqE" eventType="touchUpInside" id="JxL-Nh-NGV"/>
@@ -296,35 +296,73 @@
             <objects>
                 <viewController id="b44-7c-L2J" customClass="LugarViewController" customModule="Naturapp" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="83f-8E-3TX">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="1000"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="2Am-Nu-lO3">
-                                <rect key="frame" x="47" y="76" width="280" height="341"/>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="574-1Q-M92">
+                                <rect key="frame" x="0.0" y="96" width="375" height="904"/>
                                 <subviews>
-                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="cQS-x7-cc1">
-                                        <rect key="frame" x="20" y="20" width="240" height="128"/>
-                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="CIK-YC-De8" userLabel="Content View">
+                                        <rect key="frame" x="0.0" y="0.0" width="375" height="800"/>
+                                        <subviews>
+                                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="70f-Er-V0N">
+                                                <rect key="frame" x="10" y="500" width="355" height="300"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="300" id="7DO-OL-UUA"/>
+                                                </constraints>
+                                            </mapView>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Ubicación" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ykx-iq-lUA">
+                                                <rect key="frame" x="10" y="471" width="114" height="30"/>
+                                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="25"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                        </subviews>
+                                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                        <constraints>
+                                            <constraint firstAttribute="bottom" secondItem="70f-Er-V0N" secondAttribute="bottom" id="6YX-Xi-2tM"/>
+                                            <constraint firstAttribute="trailing" secondItem="70f-Er-V0N" secondAttribute="trailing" constant="10" id="mlN-fn-mzQ"/>
+                                            <constraint firstAttribute="height" constant="800" id="v4d-1B-iSp"/>
+                                            <constraint firstItem="70f-Er-V0N" firstAttribute="leading" secondItem="CIK-YC-De8" secondAttribute="leading" constant="10" id="wms-tZ-03q"/>
+                                        </constraints>
+                                    </view>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="cQS-x7-cc1">
+                                        <rect key="frame" x="0.0" y="0.0" width="375" height="120"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="120" id="ZLQ-69-86Z"/>
+                                        </constraints>
                                     </imageView>
-                                    <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="70f-Er-V0N">
-                                        <rect key="frame" x="20" y="193" width="240" height="128"/>
-                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                    </mapView>
                                 </subviews>
-                                <viewLayoutGuide key="contentLayoutGuide" id="PVM-Yx-AUd"/>
-                                <viewLayoutGuide key="frameLayoutGuide" id="7pc-x7-jfA"/>
+                                <constraints>
+                                    <constraint firstItem="CIK-YC-De8" firstAttribute="leading" secondItem="574-1Q-M92" secondAttribute="leading" id="5uD-SN-YGd"/>
+                                    <constraint firstItem="cQS-x7-cc1" firstAttribute="top" secondItem="574-1Q-M92" secondAttribute="top" id="9J1-Ye-8ry"/>
+                                    <constraint firstAttribute="trailing" secondItem="cQS-x7-cc1" secondAttribute="trailing" id="CPz-4k-q50"/>
+                                    <constraint firstItem="cQS-x7-cc1" firstAttribute="leading" secondItem="574-1Q-M92" secondAttribute="leading" id="Pbb-WS-sWn"/>
+                                    <constraint firstAttribute="bottom" secondItem="CIK-YC-De8" secondAttribute="bottom" id="YMW-tV-h0Y"/>
+                                    <constraint firstAttribute="trailing" secondItem="CIK-YC-De8" secondAttribute="trailing" id="cPF-dD-gbT"/>
+                                    <constraint firstItem="CIK-YC-De8" firstAttribute="top" secondItem="574-1Q-M92" secondAttribute="top" id="tTm-en-gQn"/>
+                                </constraints>
                             </scrollView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="gA7-PU-ifG"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="gA7-PU-ifG" firstAttribute="bottom" secondItem="2Am-Nu-lO3" secondAttribute="bottom" id="3N1-Ld-mV3"/>
-                            <constraint firstItem="2Am-Nu-lO3" firstAttribute="leading" secondItem="gA7-PU-ifG" secondAttribute="leading" id="4A2-jm-c06"/>
-                            <constraint firstItem="gA7-PU-ifG" firstAttribute="trailing" secondItem="2Am-Nu-lO3" secondAttribute="trailing" id="UeP-MB-2lO"/>
-                            <constraint firstItem="2Am-Nu-lO3" firstAttribute="top" secondItem="83f-8E-3TX" secondAttribute="top" id="svZ-qb-g2B"/>
+                            <constraint firstItem="574-1Q-M92" firstAttribute="leading" secondItem="gA7-PU-ifG" secondAttribute="leading" id="Z9i-Em-VMa"/>
+                            <constraint firstItem="574-1Q-M92" firstAttribute="top" secondItem="gA7-PU-ifG" secondAttribute="top" id="dfG-X6-a37"/>
+                            <constraint firstItem="574-1Q-M92" firstAttribute="bottom" secondItem="gA7-PU-ifG" secondAttribute="bottom" id="ffL-P4-3tU"/>
+                            <constraint firstItem="574-1Q-M92" firstAttribute="trailing" secondItem="gA7-PU-ifG" secondAttribute="trailing" id="hic-8I-JVT"/>
+                            <constraint firstItem="CIK-YC-De8" firstAttribute="width" secondItem="83f-8E-3TX" secondAttribute="width" id="yu8-bJ-Bnm"/>
                         </constraints>
                     </view>
-                    <navigationItem key="navigationItem" id="yYn-nS-5s6"/>
+                    <navigationItem key="navigationItem" id="yYn-nS-5s6">
+                        <barButtonItem key="rightBarButtonItem" title="Item" id="rBH-0k-KZk">
+                            <connections>
+                                <action selector="openMap:" destination="b44-7c-L2J" id="kjG-vX-uOH"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                    <size key="freeformSize" width="375" height="1000"/>
                     <connections>
                         <outlet property="image" destination="cQS-x7-cc1" id="jOC-L3-ME4"/>
                         <outlet property="mapMK" destination="70f-Er-V0N" id="ftd-zP-r6T"/>
@@ -332,7 +370,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="wt1-2m-xnV" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3481" y="552"/>
+            <point key="canvasLocation" x="3481" y="706"/>
         </scene>
         <!--Registro-->
         <scene sceneID="3Db-1B-sXL">
